--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </div>
     <div class="bottom-container">
       <a class="footer-link" href="https://www.linkedin.com/in/akshat-488895148/">LinkedIn</a>
-      <a class="footer-link" href="twitter.com/AkshatVats6">Twitter</a>
+      <a class="footer-link" href="https://twitter.com/AkshatVats6">Twitter</a>
       <a class="footer-link" href="https://www.instagram.com/akshat_vats/">Instagram</a>
       <p class="copyright">© 2021 Akshat.</p>
     </div>
